# tradingBot-SwingTrader

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements-lambda.txt  requirements.txt  submit_stop_orders.py
.github/workflows/: ci-cd.yml  ci.yml
config/: dev-aggressive-blue.json  dev-aggressive-green.json  dev-swing-trader-blue.json  dev-swing-trader-green.json  prod-aggressive-blue.json  prod-aggressive-green.json
infrastructure/: trading_bot_stack.py
src/: __init__.py
src/alpaca_client/: __init__.py  client.py
src/lambdas/daily_report/: handler.py
src/lambdas/kill_switch/: handler.py
src/lambdas/monthly_report/: handler.py
src/lambdas/quarterly_report/: handler.py
src/lambdas/trading_executor/: handler.py  handler_legacy.py
src/lambdas/weekly_report/: handler.py
src/market_scanner/: __init__.py  scanner.py
src/models/: __init__.py  risk_metrics.py  system_state.py
src/position_management/: __init__.py  position_evaluator.py
src/risk_management/: __init__.py  risk_manager.py
src/services/: __init__.py  execution_orchestrator.py  order_service.py  pdt_service.py
src/strategies/: __init__.py  base_strategy.py  ma_crossover.py  mean_reversion.py  momentum_breakout.py  multi_day_momentum.py  opening_range_breakout.py  pairs_trading.py  position_builder.py  relative_strength_intraday.py  strategy_manager.py  volatility_arbitrage.py
src/utils/: __init__.py  config_loader.py  day_trade_repository.py  logger.py  pdt_tracker.py  position_reconciliation.py  type_conversion.py  wash_sale_tracker.py
